icon flickering issue fix and more optimized icon import

--- a/movie-watchlist/styles.css
+++ b/movie-watchlist/styles.css
@@ -69,6 +69,8 @@ body {
   border-radius: 5px;
   padding: 0.5rem;
   aspect-ratio: 1/1;
+  height: 36px;
+  width: 36px;
   color: #fff;
   cursor: pointer;
   display: flex;
